# nodezerov2

./: .gitignore  Freecodebinarysignlang  LICENSE  README.md  Seehowmybrainworks  Setup.py  Visionadapter.py  codes arena  dockerfile  pyproject.toml  requirements.txt  tox_gate.py
.github/workflows/: Test.yml  ci.yml
nodezero_v2/: __init__.py
tests/: test_gates.py
