
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nodezerov2"
version = "0.1.0"
description = "AI Safety Gates: Drift/Tox blocks"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Luke Vinehout"}]
dependencies = [
    "numpy",
    "pytest>=7.0",
    "ollama"  # If using
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nodezero_v2*"]
namespaces = false
